--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
     <build_depend>nav_msgs</build_depend>
     <build_depend>sensor_msgs</build_depend>
     <build_depend>std_msgs</build_depend>
+    <build_depend>visualization_msgs</build_depend>
 
     <build_depend>tf2_geometry_msgs</build_depend>
     <build_depend>tf2_sensor_msgs</build_depend>
@@ -23,6 +24,7 @@
     <exec_depend>sensor_msgs</exec_depend>
     <exec_depend>std_msgs</exec_depend>
     <exec_depend>nav_msgs</exec_depend>
+    <exec_depend>visualization_msgs</exec_depend>
     <exec_depend>tf</exec_depend>
     <exec_depend>tf_transformations</exec_depend>
 
